--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "bin": "index.js",
   "scripts": {
     "lint": "xo --fix",
-    "test": "xo"
+    "test": "xo",
+    "prerelase": "npm test",
+    "release": "standard-version"
   },
   "dependencies": {
     "kleur": "^4.0.2",
@@ -14,6 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
+    "standard-version": "^8.0.2",
     "xo": "^0.32.1"
   },
   "repository": "viko16/create",
