--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "cosmiconfig": "^6.0.0",
     "kleur": "^4.0.2",
     "mrm-core": "^4.1.1"
   },
