fix: add npmignore to avoid npm rename gitignore

--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "singleQuote": true,
     "trailingComma": "es5",
     "bracketSpacing": true
-  }
+  },
+  "files": [
+    "index.js",
+    "template"
+  ]
 }
