--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cosmiconfig": "^6.0.0",
     "kleur": "^4.0.2",
+    "lodash.camelcase": "^4.3.0",
     "mrm-core": "^4.1.1"
   },
   "devDependencies": {
